--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,5 +46,6 @@
         "xtr1common": "cpp",
         "xutility": "cpp",
         "string": "cpp"
-    }
+    },
+    "cmake.sourceDirectory": "/home/hamza/from-0/ML-DL-From-Scratch/lmath"
 }
